esphome/esphome.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  name: esphome
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: esphome
  strategy:
    # since we're using hosteNetwork: true we can't do a rolling update since the port won't be free
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: esphome
    spec:
      serviceAccount: esphome
      containers:
      - image: esphome
        imagePullPolicy: IfNotPresent
        name: esphome
        ports:
        - containerPort: 6052
          name: esphome-ui
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - name: config-volume
          mountPath: /config
        livenessProbe:
          httpGet:
            path: /
            port: 6052
        readinessProbe:
          httpGet:
            path: /
            port: 6052
        startupProbe:
          httpGet:
            path: /
            port: 6052
          failureThreshold: 30
          periodSeconds: 10
        #securityContext:
        #  privileged: true
      dnsPolicy: ClusterFirst
      hostNetwork: true # needs this in order to see the ESPHome Devices online/offline status
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: esphome-pv-claim
