esphome/esphome.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome-ui
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6052
    protocol: TCP
    targetPort: 6052
  selector:
    app: esphome
  sessionAffinity: None
  type: ClusterIP
