esphome/esphome.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: esphome
spec:
  host: esphome.local
  port:
    targetPort: 6052
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: esphome-ui
    weight: 100
  wildcardPolicy: None
